--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^12.0.0",
     "next": "^14.2.31",
     "react": "^18",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18",
     "reactflow": "^11.11.4",
     "zustand": "^4.5.7"
