--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
   },
   "dependencies": {
     "firebase": "^12.0.0",
-    "next": "^14.2.31",
-    "react": "^18",
+    "next": "^15.0.0",
+    "react": "^19.0.0",
     "react-confetti": "^6.4.0",
-    "react-dom": "^18",
+    "react-dom": "^19.0.0",
     "reactflow": "^11.11.4",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@types/node": "^20.19.9",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "15.x",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
