--- a/package.json
+++ b/package.json
@@ -3,29 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "firebase": "^12.0.0",
-    "next": "^14.2.31",
-    "react": "^18",
+    "next": "15.4.6",
+    "react": "19.1.1",
     "react-confetti": "^6.4.0",
-    "react-dom": "^18",
+    "react-dom": "19.1.1",
     "reactflow": "^11.11.4",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@types/node": "^20.19.9",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "19.1.9",
+    "@types/react-dom": "19.1.7",
     "autoprefixer": "^10.4.21",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "15.4.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.9",
+    "@types/react-dom": "19.1.7"
   }
 }
