integrated gemini flash 2.5

--- a/package.json
+++ b/package.json
@@ -3,33 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3000",
     "lint": "next lint"
   },
   "dependencies": {
     "firebase": "^12.0.0",
-    "next": "15.4.6",
-    "react": "19.1.1",
+    "next": "^15.4.6",
+    "react": "^19.1.1",
     "react-confetti": "^6.4.0",
-    "react-dom": "19.1.1",
+    "react-dom": "^19.1.1",
     "reactflow": "^11.11.4",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
-    "@types/node": "^20.19.9",
+    "@types/node": "^20.19.10",
     "@types/react": "19.1.9",
-    "@types/react-dom": "19.1.7",
     "autoprefixer": "^10.4.21",
     "eslint": "^8",
-    "eslint-config-next": "15.4.6",
+    "eslint-config-next": "^15.4.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  },
-  "overrides": {
-    "@types/react": "19.1.9",
-    "@types/react-dom": "19.1.7"
   }
 }
